tests/miniJava/pos/000662_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( false ) System.out.println ( { } ) ; else while ( 0 ) { } } }
