tests/miniJava/neg/006267_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while ( false 0 ) { } } }
